--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-firebase/app": "^20.5.0",
     "@react-native-firebase/auth": "^20.5.0",
+    "@react-native-firebase/firestore": "^20.5.0",
     "@react-navigation/native": "^6.0.2",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "~51.0.28",
+    "expo": "^51.0.32",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.26",
     "expo-font": "~12.0.10",
