--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-actions-sheet": "^0.9.7",
+    "react-native-calendars": "^1.1306.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
